--- a/app.json
+++ b/app.json
@@ -15,7 +15,16 @@
       "**/*"
     ],
     "ios": {
+      "infoPlist": {
+        "CFBundleAllowMixedLocalizations": true
+      },
       "supportsTablet": true
+      
+    },
+    "locales": {
+      "en": "./locales/en.json",
+      "ru": "./locales/ru.json"
+
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +34,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-localization"
+    ]
   }
 }
