--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
@@ -17,12 +18,13 @@
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "i18n-js": "^4.4.3",
+    "i18next": "^23.11.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-i18next": "^14.1.1",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "@react-native-picker/picker": "2.6.1"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
