--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-localization": "~14.8.3",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.1",
     "i18n-js": "^4.4.3",
     "i18next": "^23.11.2",
     "nativewind": "^2.0.11",
