--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
     "react-native": "0.73.6",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
