--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
+    "expo-image-picker": "~14.7.1",
     "expo-localization": "~14.8.3",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
@@ -28,8 +29,7 @@
     "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-image-picker": "~14.7.1"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
