--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -19,7 +20,7 @@
     "expo-localization": "~14.8.3",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
-    "firebase": "^10.11.1",
+    "firebase": "^10.13.0",
     "i18n-js": "^4.4.3",
     "i18next": "^23.11.2",
     "nativewind": "^2.0.11",
@@ -28,9 +29,9 @@
     "react-native": "0.73.6",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-reanimated": "~3.6.2"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
