--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.14",
+    "expo-image-manipulator": "~11.8.0",
     "expo-image-picker": "~14.7.1",
     "expo-localization": "~14.8.3",
     "expo-location": "~16.5.5",
@@ -32,8 +35,7 @@
     "react-native-image-resizer": "^1.4.5",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-image-manipulator": "~11.8.0"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
